--- a/style/styles.css
+++ b/style/styles.css
@@ -55,7 +55,7 @@ a.active .option-content {
 
 div.bordered {
 	margin-bottom: 8px;
-	padding-bottom: 8px;
+	padding: 0, 8px, 8px, 8px;
 }
 
 input {
