--- a/style/styles.css
+++ b/style/styles.css
@@ -31,6 +31,34 @@ body {
 	line-height: 1;
 }
 
+li {
+	margin-top: 16px;
+	margin-bottom: 16px;
+}
+
+ol, ul {
+	padding-left: 2em;
+	list-style-type: none;
+}
+
+ol > li {
+	counter-increment: customlistcounter;
+}
+
+ol > li:before {
+	content: counter(customlistcounter);
+	margin-right: 1em;
+}
+
+ol:first-child {
+	counter-reset: customlistcounter;
+}
+
+ul > li:before {
+	content: "\2022";
+	margin-right: 1em;
+}
+
 a {
 	text-decoration: none;
 	color: #fff;
