--- a/style/styles.css
+++ b/style/styles.css
@@ -50,12 +50,17 @@ ol > li:before {
 	margin-right: 1rem;
 }
 
-ol:first-child {
+ol {
 	counter-reset: listCount;
 }
 
 ul > li:before {
 	content: "\2022";
+	margin-right: 1rem;
+}
+
+ul ul > li:before {
+	content: "\25A0";
 	margin-right: 1rem;
 }
 
