--- a/style/styles.css
+++ b/style/styles.css
@@ -48,6 +48,7 @@ ol > li {
 ol > li:before {
 	content: counter(listCount);
 	margin-right: 1rem;
+	cursor: default;
 }
 
 ol {
@@ -57,6 +58,7 @@ ol {
 ul > li:before {
 	content: "\2022";
 	margin-right: 1rem;
+	cursor: default;
 }
 
 ul ul > li:before {
