--- a/style/styles.css
+++ b/style/styles.css
@@ -137,17 +137,18 @@ input, textarea {
 
 div.bordered, input, button, textarea {
 	border: .375em solid #fff;
-	border-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAASAQMAAABsABwUAAAABlBMVEUAAAD///+l2Z/dAAAAAXRSTlMAQObYZgAAACBJREFUCNdjsP/PAMb//x8A4z/8EPyBGRuGy8PUw/QDALOEIU9PetX7AAAAAElFTkSuQmCC) 6 repeat;
+	border-image: url('img/border.png') 6 repeat;
 }
 
 button.invalid, input:invalid, textarea:invalid {
 	color: #f00;
-	border-image-source: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAASAQMAAABsABwUAAAABlBMVEUAAAD/AAAb/40iAAAAAXRSTlMAQObYZgAAACBJREFUCNdjsP/PAMb//x8A4z/8EPyBGRuGy8PUw/QDALOEIU9PetX7AAAAAElFTkSuQmCC);
+	border-color: #f00;
+	border-image-source: url('img/border-invalid.png');
 }
 
 button:active, button.active, input:focus, textarea:focus {
 	border-color: #ff0;
-	border-image-source: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAASAQMAAABsABwUAAAABlBMVEUAAAD//wCI23BQAAAAAXRSTlMAQObYZgAAACBJREFUCNdjsP/PAMb//x8A4z/8EPyBGRuGy8PUw/QDALOEIU9PetX7AAAAAElFTkSuQmCC);
+	border-image-source: url('img/border-active.png');
 }
 
 textarea {
